tests/parser/tests/cases/should_fail/malformed_access_name/case.stderr
error: unexpectedly encountered a `(...)`
 --> $DIR/case.hash:7:7
6 |   
7 |   a::b:c()
  |         ^^ here
  = help: consider adding a `;`
